--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -38,7 +38,7 @@
   text-decoration: none;
   border-bottom: 2px solid transparent;
   padding-bottom: 3px;
-  transition: all 200ms;
+  transition: all 300ms;
 }
 
 .nav-button:hover>a {
@@ -46,3 +46,7 @@
   border-bottom: 2px solid #000;
 }
 
+.nav-button .active {
+  color: #111827;
+  font-weight: bold;
+}
