--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 .header {
   display: flex;
   width: 80%;
-  height: 70px;
+  padding: 35px 0;
   margin: auto;
   justify-content: space-between;
   align-items: center;
@@ -26,9 +26,6 @@
 .nav-button {
   border: none;
   background-color: transparent;
-  cursor: pointer;
-  padding: 5px;
-
 }
 
 .nav-button a {
@@ -37,7 +34,9 @@
   color: #4b5563;
   text-decoration: none;
   border-bottom: 2px solid transparent;
+  padding: 5px;
   padding-bottom: 3px;
+  cursor: pointer;
   transition: all 300ms;
 }
 
