--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
   font-family: Inter;
 }
 
+html {
+  scrollbar-gutter: stable;
+}
+
 body {
   margin: 0;
   font-family: Inter ,-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -28,4 +32,30 @@ code {
 .content-container {
   flex-grow: 1;
   display: flex;
+}
+
+.page-title {
+  font-size: 40px;
+  margin-top: 40px;
+  color: #111827;
+}
+
+.page-desc {
+  margin-top: 10px;
+  color: #4b5563;
+}
+
+.button {
+  margin-left: 10px;
+  padding: 8px 12px;
+  border: none;
+  background-color: #111827;
+  color: #fff;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: all 200ms;
+}
+
+.button:hover {
+  background-color: #374151;
 }
