--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -64,22 +64,19 @@
   height: 100%;
 }
 
-.links-container {
+.buttons-container {
   grid-area: buttons;
   display: flex;
-  gap: 15px;
+  gap: 10px;
   align-self: self-end;
 }
 
-.links-container a {
+.buttons-container a {
   border: none;
-  background-color: #fff;
   cursor: pointer ;
   transition: transform 200ms;
-}
-
-.links-container a:hover {
-  transform: scale(1.1);
+  color: inherit;
+  text-decoration: none;
 }
 
 .personal-img-mask {
