--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -39,6 +39,7 @@
   max-width: 400px;
   transition: all 200ms;
   border-radius: 10px;
+  box-shadow: 0 4px 3px #0002;
 }
 
 .project:hover {
@@ -64,24 +65,23 @@
 }
 
 .project-title {
-  margin-top: 15px;
+  margin: 15px;
+  margin-bottom: 0;
   font-size: 23px;
-  padding-left: 10px;
 }
 
 .project-desc {
   margin-top: 8px;
+  margin-left: 15px;
   color: #4b5563;
-  padding-left: 10px;
 }
 
 .project-tec {
-  margin: 15px 0;
+  margin: 15px;
   display: flex;
   justify-content: center;
-  gap: 10px;
   flex-wrap: wrap;
-  padding-left: 10px;
+  gap: 10px;
 }
 
 .tec {
@@ -92,6 +92,6 @@
 }
 
 .project-button {
-  margin-left: 10px;
-  margin-bottom: 10px;
+  margin-left: 15px;
+  margin-bottom: 15px;
 }
