--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,11 @@ code {
     monospace;
 }
 
+a{
+  color: inherit;
+  text-decoration: none;
+}
+
 #root {
   display: flex;
   flex-direction: column;
@@ -36,7 +41,7 @@ code {
 
 .page-title {
   font-size: 40px;
-  margin-top: 40px;
+  margin-top: 10px;
   color: #111827;
 }
 
