--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,7 @@
 .footer {
   padding: 20px 0;
   font-size: 14px;
+  font-weight: 300;
   color: #4b5563;
   display: flex;
   justify-content: center;
