--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -23,14 +23,9 @@
   gap: 20px;
 }
 
-.nav-button {
-  border: none;
-  background-color: transparent;
-}
-
-.nav-button a {
+.link {
   font-size: 18px;
-  font-weight: 500;
+  font-weight: 400;
   color: #4b5563;
   text-decoration: none;
   border-bottom: 2px solid transparent;
@@ -40,12 +35,12 @@
   transition: all 300ms;
 }
 
-.nav-button:hover>a {
+.link:hover {
   color: #111827;
   border-bottom: 2px solid #000;
 }
 
-.nav-button .active {
+.active {
   color: #111827;
   font-weight: bold;
 }
