--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -36,6 +36,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  width: 100%;
   max-width: 400px;
   transition: all 200ms;
   border-radius: 10px;
