--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -1,4 +1,4 @@
-.project-page {
+.projects-page {
   width: 80%;
   margin: 0 auto;
   text-align: center;
@@ -53,14 +53,14 @@
   transform: scale(1.05);
 }
 
-.project-img {
+.projects-page .project-img {
   width: 100%;
   height: 200px;
   overflow: hidden;
   border-radius: 10px;
 }
 
-.project-img img {
+.projects-page .project-img img {
   width: 100%;
   height: 100%;
   object-fit: cover;
