--- a/src/pages/Project/Project.css
+++ b/src/pages/Project/Project.css
@@ -35,6 +35,7 @@
   min-height: 300px;
   overflow: hidden;
   border-radius: 10px;
+  box-shadow: 0 4px 4px #0004;
 }
 
 .project-page .project-img img {
