--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -50,7 +50,7 @@
 }
 
 .project:hover {
-  transform: scale(1.05);
+  transform: scale(1.03);
 }
 
 .projects-page .project-img {
@@ -68,7 +68,7 @@
 }
 
 .project:hover .project-img img {
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 
 .project-title {
@@ -81,6 +81,7 @@
   margin-top: 8px;
   margin-left: 15px;
   color: #4b5563;
+  text-align: start;
 }
 
 .project-tec {
