--- a/src/pages/Skills/Skills.css
+++ b/src/pages/Skills/Skills.css
@@ -4,22 +4,27 @@
   text-align: center;
 }
 
-.skill-content {
+.skills-content {
   display: flex;
   justify-content: space-evenly;
   align-items: stretch;
   margin-top: 40px;
 }
 
-.skill-area {
+.skills-area {
   width: 30%;
   border-radius: 20px;
   padding: 20px;
   box-shadow: 0 2px 4px 1px #0002;
 }
 
+.skills-area-title {
+  font-size: 30px;
+  margin: 10px 0;
+  margin-bottom: 35px;
+}
+
 .skill-container {
-  margin-top: 20px;
   display: flex;
   gap: 30px;
   justify-content: center;
