transform to landing page

--- a/src/index.css
+++ b/src/index.css
@@ -34,14 +34,17 @@ a{
   height: 100vh;
 }
 
-.content-container {
-  flex-grow: 1;
-  display: flex;
+.pages .page:nth-child(2n) {
+  background-color: #f9fafb;
+}
+
+.page {
+  padding-bottom: 40px;
 }
 
 .page-title {
   font-size: 40px;
-  margin-top: 10px;
+  padding-top: 80px;
   color: #111827;
 }
 
@@ -49,7 +52,7 @@ a{
   color: #4b5563;
   text-wrap: balance;
   max-width: 80%;
-  margin: auto;
+  margin: 0 auto;
   margin-top: 10px;
 }
 
