--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,24 @@
 .header {
-  display: flex;
-  width: 80%;
-  padding: 20px 0;
+  position: fixed;
+  right: 0;
+  left: 0;
+  padding: 0 40px;
+  z-index: 100;
+}
+
+.header-content {
+  max-width: 1200px;
+  padding: 15px 30px;
   margin: auto;
+  border-top: none;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  box-shadow: 0 2px 2px #4b556333;
+  display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: #fffd;
+  backdrop-filter: blur(5px);
 }
 
 .header-title {
@@ -26,7 +40,6 @@
 .link {
   font-size: 18px;
   font-weight: 400;
-  color: #4b5563;
   text-decoration: none;
   border-bottom: 2px solid transparent;
   padding: 5px;
@@ -41,6 +54,5 @@
 }
 
 .active {
-  color: #111827;
   font-weight: bold;
 }
