--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,4 +1,4 @@
-.home-page {
+.home-content {
   display: grid;
   grid-template-areas: 
     "title img"
@@ -6,8 +6,11 @@
     "info img"
     "buttons img"
   ;
-  width: 80%;
+  max-width: 1200px;
+  padding: 40px;
   margin: auto;
+  min-height: 100vh;
+  align-content: center;
 }
 
 .home-title {
