--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -1,6 +1,6 @@
-.projects-page {
-  width: 80%;
-  margin: 0 auto;
+.projects-content {
+  margin: auto;
+  max-width: 1200px;
   text-align: center;
 }
 
@@ -28,11 +28,13 @@
 }
 
 .projects-container {
-  margin: 50px 0;
+  margin-top: 50px;
   display: flex;
   flex-wrap: wrap;
-  gap: 60px;
+  gap: 50px;
   justify-content: center;
+  padding: 20px;
+  padding-top: none;
 }
 
 /*---------PROJECT CARD---------*/
@@ -42,7 +44,7 @@
   flex-direction: column;
   align-items: flex-start;
   width: 100%;
-  max-width: 400px;
+  max-width: 350px;
   transition: all 200ms;
   border-radius: 10px;
   box-shadow: 0 4px 8px #0002;
