--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -52,17 +52,25 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  gap: 10px;
 }
 
-.info-item {
+.info-item-title {
+  margin-bottom: 5px;
+}
+
+.info-item-text {
   padding: 8px;
   background-color: #e5e7eb;
   border-radius: 10px;
   text-align: start;
 }
 
-.info-button {
-  margin-top: 15px;
+.info-buttons-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  gap: 10px;
 }
 
 /*------ENVIAR MENSAJE-------*/
