--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: Inter;
+  scroll-behavior: smooth;
 }
 
 html {
@@ -58,17 +59,41 @@ a{
 
 .button {
   padding: 8px 12px;
-  border: none;
-  background-color: #111827;
-  color: #fff;
+  border: 1px solid #111827;
+  color: #111827;
+  font-weight: 500;
   border-radius: 8px;
   cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
   transition: all 200ms;
 }
 
 .button:hover {
-  background-color: #374151;
+  color: #fff;
 }
+
+.button::before {
+    content: '';
+    display: block;
+    height: 300%;
+    width: 200%;
+    position: absolute;
+    z-index: -1;
+    border-radius: 100%;
+    top: 100%;
+    left: 100%;
+    background-color: #111827;
+    transition: all 200ms;
+}
+
+.button:hover::before {
+  top: -25px;
+  left: -50px;
+}
+
+
 
 .tec {
   font-size: 14px;
