--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,6 @@
   scroll-behavior: smooth;
 }
 
-html {
-  scrollbar-gutter: stable;
-}
-
 body {
   margin: 0;
   font-family: Inter ,-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -89,8 +85,8 @@ a{
 }
 
 .button:hover::before {
-  top: -25px;
-  left: -50px;
+  top: -50%;
+  left: -50%;
 }
 
 
