--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -56,3 +56,18 @@
 .active {
   font-weight: bold;
 }
+
+@media (max-width: 650px) {
+  .header {
+    padding: 0;
+  }
+
+  .header-content {
+    max-width: none;
+    border-radius: 0px;
+  }
+
+  .header-nav {
+    display: none;
+  }
+}
