--- a/src/pages/Skills/Skills.css
+++ b/src/pages/Skills/Skills.css
@@ -1,5 +1,5 @@
 .skills-page {
-  max-width: 1200px;
+  max-width: 1100px;
   margin: 0 auto;
   text-align: center;
 }
@@ -9,10 +9,12 @@
   justify-content: space-evenly;
   align-items: stretch;
   margin-top: 40px;
+  padding: 20px;
+  gap: 20px;
 }
 
 .skills-area {
-  width: 30%;
+  flex-grow: 1;
   border-radius: 20px;
   padding: 30px 20px;
   box-shadow: 0 2px 4px 1px #0002;
@@ -39,4 +41,17 @@
   color:#4b5563;
   font-size: 13px;
   margin-top: 5px;
+}
+
+@media (max-width: 900px) {
+  .skills-content {
+    flex-direction: column;
+    padding: 0 40px;
+    align-items: center;
+  }
+
+  .skills-area {
+    width: 100%;
+    max-width: 600px;
+  }
 }
