--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -5,8 +5,10 @@
 }
 
 .projects-filter {
-  margin-top: 40px;
+  margin: 30px 0;
   display: flex;
+  flex-wrap: wrap;
+  padding: 0 20px;
   justify-content: center;
   gap: 10px;
 }
@@ -25,7 +27,6 @@
 }
 
 .projects-container {
-  margin-top: 50px;
   display: flex;
   flex-wrap: wrap;
   gap: 50px;
@@ -89,4 +90,14 @@
 .project-card .button {
   margin: 15px;
   margin-top: 25px;
+}
+
+@media (max-width: 800px ) {
+  .projects-container {
+    padding: 0 40px;
+  }
+
+  .project-card {
+    max-width: 600px;
+  }
 }
