replace font size px for em

--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ a{
 }
 
 .page-title {
-  font-size: 40px;
+  font-size: 2.5em;
   padding-top: 80px;
   color: #111827;
 }
@@ -51,6 +51,7 @@ a{
   max-width: 80%;
   margin: 0 auto;
   margin-top: 10px;
+  font-size: 1em;
 }
 
 .button {
@@ -89,11 +90,20 @@ a{
   left: -50%;
 }
 
-
-
 .tec {
-  font-size: 14px;
+  font-size: 0.9em;
   background-color: #e5e7eb;
   padding: 4px 12px;
   border-radius: 8px;
+}
+
+@media (max-width: 800px) {
+  .page-title {
+    font-size: 2em;
+  }
+
+  .page-desc {
+    font-size: 0.9em;
+    text-wrap: pretty;
+  }
 }
