--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -22,13 +22,10 @@
 }
 
 .header-title {
-  font-size: 26px;
+  padding-left: 10px;
+  font-size: 1.5em;
   font-weight: bold;
-}
-
-.header-title>a {
   text-decoration: none;
-  color: #030712;
 }
 
 .nav-list {
@@ -38,7 +35,8 @@
 }
 
 .link {
-  font-size: 18px;
+  font-size: 1.1em;
+  color: #4b5563;
   font-weight: 400;
   text-decoration: none;
   border-bottom: 2px solid transparent;
@@ -68,7 +66,7 @@
   }
 
   .header-title {
-    font-size: 20px;
+    font-size: 1.2em;
   }
 
   .header-nav {
