--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -15,13 +15,14 @@
 
 .home-title {
   grid-area: title;
-  font-size: 50px;
+  font-size: 3em;
   color: #111827;
   margin-bottom: 20px;
   text-wrap: balance;
 }
 
 .home-desc {
+  font-size: 1.1em;
   grid-area: desc;
   color: #4b5563;
   margin-right: 100px;
@@ -115,18 +116,18 @@
   .home-title {
     margin-top: 30px;
     margin-bottom: 5px;
-    font-size: 30px;
+    font-size: 2em;
   }
 
   .home-desc {
     margin: 0;
-    font-size: 14px;
+    font-size: 0.9em;
     text-wrap: pretty;
   }
 
   .info {
     margin: 15px 0;
-    font-size: 12px;
+    font-size: 0.8em;
     flex-direction: row;
     justify-self: center;
     gap: 10px;
