--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -16,7 +16,7 @@
 .projects-filter-item {
   border: none;
   box-shadow: 0 3px 2px #0004;
-  font-size: 16px;
+  font-size: 1em;
   cursor: pointer;
   transition: all 200ms;
 }
@@ -71,19 +71,22 @@
 .project-card-title {
   margin: 0 15px;
   margin-bottom: 5px;
-  font-size: 23px;
+  font-size: 1.5em;
 }
 
 .project-card-desc {
   margin: 0 15px;
   color: #4b5563;
-  text-align: start;}
+  text-align: start;
+  font-size: 1.1em;
+}
 
 .project-card-tec-container {
   margin: 15px 10px;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  font-size: 1.1em;
   gap: 10px;
 }
 
